// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change layer 1`] = `
<DocumentFragment>
  <div
    class="selector"
  >
    <div
      class="control-container control-container--select control-container--full-width"
      role="presentation"
    >
      <label
        class="control-label"
        for="select-uuid"
      >
        Foo
      </label>
      <span
        class="bp3-popover-wrapper tf-select selector__select"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class=""
          >
            <button
              class="bp3-button"
              id="select-uuid"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Foo1
              </span>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </span>
        <div
          class="bp3-overlay bp3-overlay-inline"
        >
          <div
            class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
            style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
          >
            <div
              class="bp3-popover bp3-minimal bp3-select-popover"
            >
              <div
                class="bp3-popover-content"
              >
                <div>
                  <ul
                    class="bp3-menu"
                  >
                    <div
                      class="control-container__item"
                    >
                      <li
                        class=""
                      >
                        <a
                          class="bp3-menu-item bp3-active bp3-intent-primary bp3-popover-dismiss"
                        >
                          <div
                            class="bp3-text-overflow-ellipsis bp3-fill"
                          >
                            Foo1
                          </div>
                        </a>
                      </li>
                    </div>
                    <div
                      class="control-container__item"
                    >
                      <li
                        class=""
                      >
                        <a
                          class="bp3-menu-item bp3-popover-dismiss"
                        >
                          <div
                            class="bp3-text-overflow-ellipsis bp3-fill"
                          >
                            Bar1
                          </div>
                        </a>
                      </li>
                    </div>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
    <div
      class="control-container control-container--select control-container--full-width"
      role="presentation"
    >
      <label
        class="control-label"
        for="select-uuid"
      >
        Bar
      </label>
      <span
        class="bp3-popover-wrapper tf-select selector__select"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class=""
          >
            <button
              class="bp3-button"
              id="select-uuid"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Foo2
              </span>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </span>
        <div
          class="bp3-overlay bp3-overlay-inline"
        >
          <div
            class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
            style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
          >
            <div
              class="bp3-popover bp3-minimal bp3-select-popover"
            >
              <div
                class="bp3-popover-content"
              >
                <div>
                  <ul
                    class="bp3-menu"
                  >
                    <div
                      class="control-container__item"
                    >
                      <li
                        class=""
                      >
                        <a
                          class="bp3-menu-item bp3-active bp3-intent-primary bp3-popover-dismiss"
                        >
                          <div
                            class="bp3-text-overflow-ellipsis bp3-fill"
                          >
                            Foo2
                          </div>
                        </a>
                      </li>
                    </div>
                    <div
                      class="control-container__item"
                    >
                      <li
                        class=""
                      >
                        <a
                          class="bp3-menu-item bp3-popover-dismiss"
                        >
                          <div
                            class="bp3-text-overflow-ellipsis bp3-fill"
                          >
                            Bar2
                          </div>
                        </a>
                      </li>
                    </div>
                    <div
                      class="control-container__item"
                    >
                      <li
                        class=""
                      >
                        <a
                          class="bp3-menu-item bp3-popover-dismiss"
                        >
                          <div
                            class="bp3-text-overflow-ellipsis bp3-fill"
                          >
                            Baz2
                          </div>
                        </a>
                      </li>
                    </div>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
    <div
      class="bp3-callout bp3-intent-warning bp3-callout-icon selector__message"
    >
      <span
        class="bp3-icon bp3-icon-warning-sign"
        icon="warning-sign"
      >
        <svg
          data-icon="warning-sign"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            warning-sign
          </desc>
          <path
            d="M19.86 17.52l.01-.01-9-16-.01.01C10.69 1.21 10.37 1 10 1s-.69.21-.86.52l-.01-.01-9 16 .01.01c-.08.14-.14.3-.14.48 0 .55.45 1 1 1h18c.55 0 1-.45 1-1 0-.18-.06-.34-.14-.48zM11 17H9v-2h2v2zm0-3H9V6h2v8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      No layer found
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render 1`] = `
<DocumentFragment>
  <div
    class="selector"
  >
    <div
      class="control-container control-container--select control-container--full-width"
      role="presentation"
    >
      <label
        class="control-label"
        for="select-uuid"
      >
        Foo
      </label>
      <span
        class="bp3-popover-wrapper tf-select selector__select"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class=""
          >
            <button
              class="bp3-button"
              id="select-uuid"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Foo
              </span>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </span>
      </span>
    </div>
    <div
      class="control-container control-container--select control-container--full-width"
      role="presentation"
    >
      <label
        class="control-label"
        for="select-uuid"
      >
        Bar
      </label>
      <span
        class="bp3-popover-wrapper tf-select selector__select"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class=""
          >
            <button
              class="bp3-button"
              id="select-uuid"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Foo
              </span>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render an error message 1`] = `
<DocumentFragment>
  <div
    class="selector"
  >
    <div
      class="control-container control-container--select control-container--full-width"
      role="presentation"
    >
      <label
        class="control-label"
        for="select-uuid"
      >
        Foo
      </label>
      <span
        class="bp3-popover-wrapper tf-select selector__select"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class=""
          >
            <button
              class="bp3-button"
              id="select-uuid"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Bar1
              </span>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </span>
      </span>
    </div>
    <div
      class="control-container control-container--select control-container--full-width"
      role="presentation"
    >
      <label
        class="control-label"
        for="select-uuid"
      >
        Bar
      </label>
      <span
        class="bp3-popover-wrapper tf-select selector__select"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class=""
          >
            <button
              class="bp3-button"
              id="select-uuid"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Foo2
              </span>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </span>
      </span>
    </div>
    <div
      class="bp3-callout bp3-intent-warning bp3-callout-icon selector__message"
    >
      <span
        class="bp3-icon bp3-icon-warning-sign"
        icon="warning-sign"
      >
        <svg
          data-icon="warning-sign"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            warning-sign
          </desc>
          <path
            d="M19.86 17.52l.01-.01-9-16-.01.01C10.69 1.21 10.37 1 10 1s-.69.21-.86.52l-.01-.01-9 16 .01.01c-.08.14-.14.3-.14.48 0 .55.45 1 1 1h18c.55 0 1-.45 1-1 0-.18-.06-.34-.14-.48zM11 17H9v-2h2v2zm0-3H9V6h2v8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      No layer found
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render even without selector 1`] = `
<DocumentFragment>
  <div
    class="selector"
  >
    <div
      class="control-container control-container--select control-container--full-width"
      role="presentation"
    >
      <label
        class="control-label"
        for="select-uuid"
      >
        Foo
      </label>
      <span
        class="bp3-popover-wrapper tf-select selector__select"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class=""
          >
            <button
              class="bp3-button"
              id="select-uuid"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Foo
              </span>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </span>
      </span>
    </div>
    <div
      class="control-container control-container--select control-container--full-width"
      role="presentation"
    >
      <label
        class="control-label"
        for="select-uuid"
      >
        Bar
      </label>
      <span
        class="bp3-popover-wrapper tf-select selector__select"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class=""
          >
            <button
              class="bp3-button"
              id="select-uuid"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Foo
              </span>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </span>
      </span>
    </div>
    <div
      class="bp3-callout bp3-intent-warning bp3-callout-icon selector__message"
    >
      <span
        class="bp3-icon bp3-icon-warning-sign"
        icon="warning-sign"
      >
        <svg
          data-icon="warning-sign"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            warning-sign
          </desc>
          <path
            d="M19.86 17.52l.01-.01-9-16-.01.01C10.69 1.21 10.37 1 10 1s-.69.21-.86.52l-.01-.01-9 16 .01.01c-.08.14-.14.3-.14.48 0 .55.45 1 1 1h18c.55 0 1-.45 1-1 0-.18-.06-.34-.14-.48zM11 17H9v-2h2v2zm0-3H9V6h2v8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      No layer found
    </div>
  </div>
</DocumentFragment>
`;
